almost forgot to submit

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                 <p class="table-number">
                 </p>
                 <section class="input-cont">
-                    <input type="text" class="field-style" placeholder="Name">
-                    <input type="text" class="field-style" placeholder="Phone Number">
-                    <input type="text" class="field-style" placeholder="Size of party">
+                    <input type="text" id="name" class="field-style" placeholder="Name">
+                    <input type="text" id="phone" class="field-style" placeholder="Phone Number">
+                    <input type="text" id="party" class="field-style" placeholder="Size of party">
                     <div class="btn-save">SAVE</div>
 
                     </button>
@@ -82,7 +82,6 @@
             </form>
 
         </div>
-
 
     </section>
 
